--- a/style/site.css
+++ b/style/site.css
@@ -235,3 +235,11 @@ input.form-search:focus{
 
    
 }
+
+.readonly {
+    outline: none;
+    pointer-events: none;
+    cursor: not-allowed;
+    background-color: #eee;
+    opacity: 1;
+}
