angular loading bar and ngCloak

--- a/style/customLoadinBar.css
+++ b/style/customLoadinBar.css
@@ -1,4 +1,4 @@
-/*! 
+﻿/*! 
  * angular-loading-bar v0.9.0
  * https://chieffancypants.github.io/angular-loading-bar
  * Copyright (c) 2016 Wes Cruver
@@ -45,7 +45,10 @@
   height: 2px;
   border-bottom-right-radius: 1px;
   border-top-right-radius: 1px;
+
 }
+
+
 
 /* Fancy blur effect */
 #loading-bar .peg {
@@ -83,8 +86,8 @@
 }
 
 #loading-bar-spinner .spinner-icon {
-  width: 100px;
-  height:100px;
+  width: 50px;
+  height:50px;
 
   border:  solid 2px transparent;
   border-top-color:  #29d;
