--- a/style/site.css
+++ b/style/site.css
@@ -3,7 +3,7 @@
 html {
     position: relative;
     height: 100%;
-    background-color:#EEF1F4;
+    
 }   
 
 body {
@@ -15,6 +15,7 @@ body {
   width: 90%;
   margin:0 auto;
     min-height: 100%;
+
 }
 
 a, a:hover, a:focus{
@@ -244,6 +245,67 @@ input.form-search:focus{
     opacity: 1;
 }
 
+table tbody {
+  height: 80vh ;
+  overflow-y: auto;
+  width: 100%;
+}
+
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-    ng-cloak {
     display: none !important;
+}
+
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc;}
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 80%; 
+        width:auto;
+        
+	}
+    th{
+        width:auto;
+    }
+	
+	td:before { 
+		/* Now like a table header */
+		position: relative;
+		/* Top/left values mimic padding */
+		
+		
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+    td:after{
+
+    }
+	
+	/*
+	Label the data
+	*/
+    td:nth-of-type(2):before { content: "Google Link: "; float:left ; font-weight:bold; padding-top:5px;}
+	td:nth-of-type(3):before { content: "Starts On: "; float:left ; font-weight:bold}
+	td:nth-of-type(4):before { content: "Ends On: "; float:left  ;font-weight:bold}
+	td:nth-of-type(5):before {float:left; }
+
 }
