--- a/style/site.css
+++ b/style/site.css
@@ -261,20 +261,20 @@ only screen and (max-width: 760px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
 
 	/* Force table to not be like tables anymore */
-	table, thead, tbody, th, td, tr { 
+	.tree-grid,.tree-grid thead, .tree-grid tbody, .tree-grid th,.tree-grid td,.tree-grid tr { 
 		display: block; 
 	}
 	
 	/* Hide table headers (but not display: none;, for accessibility) */
-	thead tr { 
+	.tree-grid thead tr { 
 		position: absolute;
 		top: -9999px;
 		left: -9999px;
 	}
 	
-	tr { border: 1px solid #ccc;}
+	.tree-grid tr { border: 1px solid #ccc;}
 	
-	td { 
+	.tree-grid td { 
 		/* Behave  like a "row" */
 		border: none;
 		border-bottom: 1px solid #eee; 
@@ -283,11 +283,11 @@ only screen and (max-width: 760px),
         width:auto;
         
 	}
-    th{
+    .tree-grid th{
         width:auto;
     }
 	
-	td:before { 
+	.tree-grid td:before { 
 		/* Now like a table header */
 		position: relative;
 		/* Top/left values mimic padding */
@@ -296,16 +296,14 @@ only screen and (max-width: 760px),
 		padding-right: 10px; 
 		white-space: nowrap;
 	}
-    td:after{
-
-    }
+  
 	
 	/*
 	Label the data
 	*/
-    td:nth-of-type(2):before { content: "Google Link: "; float:left ; font-weight:bold; padding-top:5px;}
-	td:nth-of-type(3):before { content: "Starts On: "; float:left ; font-weight:bold}
-	td:nth-of-type(4):before { content: "Ends On: "; float:left  ;font-weight:bold}
-	td:nth-of-type(5):before {float:left; }
+    .tree-grid td:nth-of-type(2):before { content: "Google Link: "; float:left ; font-weight:bold; padding-top:5px;}
+	.tree-grid td:nth-of-type(3):before { content: "Starts On: "; float:left ; font-weight:bold}
+	.tree-grid td:nth-of-type(4):before { content: "Ends On: "; float:left  ;font-weight:bold}
+	.tree-grid td:nth-of-type(5):before {float:left; }
 
 }
