--- a/views/addEventModal.html
+++ b/views/addEventModal.html
@@ -31,8 +31,8 @@
                             <div class="form-group">
                                 <div class='input-group date' id='datetimepickerStartNew'>
                                     <input id="startDateTimePickerNew" type='text' class="form-control" ng-model="newEvent.startDateTime" required readonly />
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
+                                    <span class="input-group-addon"style="background-color:white">
+                                        <span class="glyphicon glyphicon-calendar" ></span>
                                     </span>
                                 </div>
                             </div>
@@ -45,7 +45,7 @@
                             <div class="form-group">
                                 <div class='input-group date' id='datetimepickerEndNew'>
                                     <input id="endDateTimePickerNew" type='text' class="form-control" ng-model="newEvent.endDateTime" required readonly />
-                                    <span class="input-group-addon">
+                                    <span class="input-group-addon" style="background-color:white">
                                         <span class="glyphicon glyphicon-calendar"></span>
                                     </span>
                                 </div>
