fixed error while deleting events

--- a/views/deleteEventModal.html
+++ b/views/deleteEventModal.html
@@ -13,7 +13,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-danger" ng-click="deleteEvent(event);" data-dismiss="modal">Yes</button>
+                    <button type="submit" class="btn btn-danger" ng-click="deleteEvent();" data-dismiss="modal">Yes</button>
                     <button type="reset" class="btn btn-primary" data-dismiss="modal">No</button>
                 </div>
             </div>
